invoice error commit

--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -61,8 +61,10 @@
   <!-- orders -->
   <div class="container shadow-lg rounded pb-2 pt-2 mb-5">
     <div class="row d-flex pb-2">
-      <i class="fa-solid fa-bag-shopping fa-4x"
-        ><span style="font-size: 30%" class="ps-1">orders</span></i
+      <i class="fa-solid fa-file fa-4x"
+        ><span style="font-size: 30%" class="ps-1"
+          >Sales Report / orders</span
+        ></i
       >
     </div>
     <table
