--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -10,6 +10,11 @@
       href="users/images/logos/favicon1.png"
     />
     <!-- Bootstrap -->
+    <!-- <link
+      rel="stylesheet"
+      href="users/styles/bootstrap.min.css"
+      type="text/css"
+    /> -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -39,6 +44,9 @@
         width: 100%;
       }
     </style>
+
+    <!-- Easy invoice -->
+    <script src="https://unpkg.com/easyinvoice/dist/easyinvoice.min.js"></script>
 
     <!-- Razorpay -->
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
