--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -110,6 +110,12 @@
           buttons: ["copyHtml5", "excelHtml5", "csvHtml5", "pdfHtml5"],
         });
       });
+      $(document).ready(function () {
+        $("#pdfTable2").DataTable({
+          dom: "Bfrtip",
+          buttons: ["copyHtml5", "excelHtml5", "csvHtml5", "pdfHtml5"],
+        });
+      });
     </script>
 
     <script>
