--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -36,6 +36,9 @@
             <a class="nav-link" href="/admin/coupons">Coupons</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/admin/banners">Banners</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/admin/requests"
               >Requests<span
                 class="badge bg-secondary zindex-offcanvas"
