--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -49,7 +49,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-
+<!-- /users/images/banners/expo-store.png -->
   <div class="pb-3" style="background-color: #e4d7b5">
     <!-- Example split danger button -->
     <div class="btn-group zindex-offcanvas mt-3">
