--- a/views/users/categoryProducts.ejs
+++ b/views/users/categoryProducts.ejs
@@ -29,6 +29,50 @@
         </ul>
       </div>
     </div>
+
+    <!-- banner -->
+    <div
+  id="carouselExampleControls"
+  class="carousel slide overflow-hidden pt-5"
+  data-bs-ride="carousel"
+>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img
+        src="/users/images/banners/expo-store.png"
+        class="d-block w-100"
+        alt="First slide"
+      />
+    </div>
+    <% locals.banners.forEach(banner=>{%>
+    <div class="carousel-item">
+      <img
+        src="/users/images/banners/<%=banner._id  %>.png"
+        class="d-block w-100"
+        alt="Second slide"
+      />
+    </div>
+    <%})%>
+  </div>
+  <button
+    class="carousel-control-prev"
+    type="button"
+    data-bs-target="#carouselExampleControls"
+    data-bs-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button
+    class="carousel-control-next"
+    type="button"
+    data-bs-target="#carouselExampleControls"
+    data-bs-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
   
     <!-- products -->
     <div class="container-fluid mt-5 list-wrapper">
