--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -19,7 +19,7 @@
   
               <div class="col-xl-6">
                 <div class="card-body text-black" >
-                  <h3 class="mb-5 text-uppercase d-flex justify-content-center">SIGNUP FORM</h3>
+                  <h1 class="d-flex justify-content-center mt-2 ms-2 mb-4">SignUp</h1>
                   <form
                     action="/signup"
                     id="formValidation"
@@ -118,8 +118,8 @@
                       <!-- <p class="text-danger m-auto">locals.err</p> -->
   
                     <div class="d-flex justify-content-end pt-3">
-                      <button type="submit" class="btn btn-warning btn-lg ms-2">
-                        Submit form
+                      <button type="submit" class="btn btn-dark btn-lg ms-2">
+                        Sign up
                       </button>
                   </form>  
                     </div>
