--- a/views/layouts/expoStoreLayout.ejs
+++ b/views/layouts/expoStoreLayout.ejs
@@ -23,6 +23,7 @@
     />
     <link rel="stylesheet" href="users/styles/styles.css" />
     <link rel="stylesheet" href="users/styles/validation.css" />
+    <link rel="stylesheet" href="users/styles/aboutUs.css" />
 
     <!-- default styles -->
     <style>
