--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -50,11 +50,11 @@
           </li>
           <% } %>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/about">About</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
-          </li>
+          </li> -->
         </ul>
         <div class="dropdown me-2">
           <a
