--- a/views/users/aboutUs.ejs
+++ b/views/users/aboutUs.ejs
@@ -12,10 +12,11 @@
         <span class="fa fa-group text-black"></span>
         <h2 class="text-black">Us</h2>
         <p class="lead">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled
+          This is an e-commerce website built by me and is my first project.
+          This website contains many functionalities that an e-commerce website
+          should contain. Main attractions of this website are login, signup,
+          home, cart, wishlist, order management, user profile, reutrns, OTP
+          login, mobile verification etc.
         </p>
       </div>
       <div
@@ -37,12 +38,13 @@
         data-wow-offset="200"
       >
         <span class="fa fa-file text-black"></span>
-        <h2 class="text-black">Section 3</h2>
+        <h2 class="text-black">Details</h2>
         <p class="lead">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled
+          This is an e-commerce website built by me and is my first project.
+          This website contains many functionalities that an e-commerce website
+          should contain. Main attractions of this website are login, signup,
+          home, cart, wishlist, order management, user profile, reutrns, OTP
+          login, mobile verification etc.
         </p>
       </div>
     </div>
