--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -17,14 +17,14 @@
       </div>
       <div class="carousel-item">
         <img
-          src="users/images/Carousel-1.png"
+          src="users/images/carousel-1.png"
           class="d-block w-100"
           alt="Second slide"
         />
       </div>
       <div class="carousel-item">
         <img
-          src="users/images/Carousel-3.png"
+          src="users/images/carousel-3.png"
           class="d-block w-100"
           alt="Third slide"
         />
