--- a/views/partials/userFooter.ejs
+++ b/views/partials/userFooter.ejs
@@ -3,33 +3,26 @@
   <div class="container p-4 pb-0">
     <!-- Section: Social media -->
     <section class="mb-4">
-      <!-- Facebook -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-facebook-f"></i
-      ></a>
-
-      <!-- Twitter -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-twitter"></i
-      ></a>
-
-      <!-- Google -->
+      <!-- Google
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-google"></i
-      ></a>
-
-      <!-- Instagram -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-instagram"></i
-      ></a>
+      ></a> -->
 
       <!-- Linkedin -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a
+        class="btn btn-outline-light btn-floating m-1"
+        href="https://www.linkedin.com/in/arun-raj-b-601195246"
+        role="button"
+        target="_blank"
         ><i class="fab fa-linkedin-in"></i
       ></a>
 
       <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a
+        class="btn btn-outline-light btn-floating m-1"
+        href="https://github.com/Arun-Raj-B/Expo-store-Project-1.git"
+        role="button"
+        target="_blank"
         ><i class="fab fa-github"></i
       ></a>
     </section>
